CHANGE: text and image changes by shiv

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- end of preloader -->
 
     <div class="body-content" style="display:none;">
-        <div class="navbar-solid-state">
+        <div class="USV & ASSOCIATES">
              <!-- Header -->
             <header id="header" class="alt">
-                <!-- <h1><a href="index.html" class="a-transparent">Solid State</a></h1> -->
+                <!-- <h1><a href="index.html" class="a-transparent">USV& ASSOCIATES</a></h1> -->
                 <nav>
                     <a href="#menu" class="a-menu">Menu <i class="ion-android-menu"></i> </a>
                 </nav>
@@ -47,13 +47,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>MAX OUT YOUR USER EXPERIENCE</h2>
+                        <h2>CALL 9911669435</h2>
+			<h2>COMPANY REGESTRATION, COMPLIANCES, GST </h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12"> 
-                        <p>ANOTHER FREE + FULLY RESPONSIVE SITE TEMPLATE BY <a href="http://www.themewagon.com">THEMEWAGON</a></p>
+                        <p>Company Regestration @6999 No Hiddend Cost
+Gst Regestration @599 No Hiddend Charges <a href="http://www.themewagon.com">THEMEWAGON</a></p>
                     </div>
                 </div>
 
@@ -71,17 +73,22 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="section-highlight">
-                                <h2>BEST SPORTS HEADPHONE EVER</h2>
+                                <h2>COMPANY REGSTRATION</h2>
                             </div>
                             <div class="section-details">
                                 <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                                    Easy to start
+Private Limited created through an incorporation process prescribed under the Companies Act 2013, where minimum two shareholders & two Director are needed. For registration of a company need an address for putting the registered office address.
+<P>
+Liabilities
+Business is the game of challenges where are only two stages profit & loss. The liability of members is limited in a Limited company, that mean which money and assets you have in the name of your company only that thinks are liable for any kind of liabilities in company for and the personal assets of promoter's person bank account are not liable.
+
                                 </p>
                                 <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <img src="assets/images/03_headephone.png" alt="Responsive image" class="img-responsive">
+                            <img src="assets/images/03_COMPANY REG.png" alt="Responsive image" class="img-responsive">
                         </div>
                     </div>
                 </div>
@@ -93,15 +100,15 @@
                 <div class="two-features">
                     <div class="row">
                         <div class="col-md-4">
-                        <img src="assets/images/04_shoe.png" alt="Responsive image" class="img-responsive">
+                        <img src="assets/images/04_WHY.png" alt="Responsive image" class="img-responsive">
                         </div>
                         <div class="col-md-8">
                             <div class="section-highlight">
-                                <h2>WHY YOU LIKE OUR SHOES?</h2>
+                                <h2>WHY US?</h2>
                             </div>
                             <div class="section-details">
                                 <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                                    We are a team of CA, CS, CMA and Lawyers who is using technology at it best to provide services to cater to the need of todays businesses in the fast moving and cost effective world..
                                 </p>
                                 <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                             </div>
@@ -117,17 +124,17 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="section-highlight">
-                                <h2>YANKEES BASEBALL CAP</h2>
+                                <h2>Digital Signature Certificate@499</h2>
                             </div>
                             <div class="section-details">
                                 <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                                    A Digital Signature Certificate (DSC) is a secure digital key that certifies the identity of the holder, issued by a Certifying Authority (CA). It typically contains your identity (name, email, country, APNIC account name and your public key). Digital Certificates use Public Key Infrastructure meaning data that has been digitally signed or encrypted by a private key can only be decrypted by its corresponding public key. A digital certificate is an electronic "credit card" that establishes your credentials when doing business or other transactions on the Web.
                                 </p>
                                 <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <img src="assets/images/05_cap.png" alt="Responsive image" class="img-responsive">
+                            <img src="assets/images/05_SIGN.png" alt="Responsive image" class="img-responsive">
                         </div>
                     </div>
                 </div>
@@ -150,7 +157,7 @@
                                 <div class="row">                                       
                                     <div class="col-md-9 col-md-offset-1">
                                         <p>
-                                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urnamauris id tellus arcu.
+                  
                                         </p>
                                     </div>
                                 </div>
@@ -164,12 +171,12 @@
                         <div class="col-md-6">
                             <div class="four-features four-features-left-bottom">
                                 <div class="features-img">
-                                    <img src="assets/images/07.jpg" alt="Responsive image" class="img-responsive">
+                                    <img src="assets/images/06_comp.png" alt="Responsive image" class="img-responsive">
                                 </div>
                                 <div class="features-content">
-                                    <h3>MOUNTAIN HIKING</h3>
+                                    <h3>COMPANY REGESTRATION</h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                   Want to setup a business at affordable price , we will incorporate your Business. Clear your all registration doubts with our professionals.
                                     </p>
                                     <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                                 </div>
@@ -177,11 +184,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="four-features four-features-right-bottom">
-                                <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
+                                <img src="assets/images/gst.png" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>SHOE SERVICES</h3>
+                                    <h3>GST REGESTRATION </h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    We can help you get GST registration for your business within 48 hours. Our services are best in class and is at a reasonable cost (INR 499/- per registration for individual and INR 999/- per registration for company
                                     </p>
                                     <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                                 </div>
@@ -191,11 +198,49 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="four-features four-features-left-top">
-                            <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
+                            <img src="assets/images/gstr.jpg"  alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>MOUNTAIN VISION</h3>
+                                    <h3>GST RETURNS</h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    All registered businesses have to file monthly, quarterly and/or annual GST Returns based on the type of business.
+
+
+
+GSTR 3B is required to be filed monthly for all registered non composition business.
+
+GSTR 1 is required to be filed monthly if turnover exceeds Rs. 1.5 crore, upto 1.5 crore this can be filed quarterly.
+
+
+
+Composition holders need to file quarterly returns.
+
+
+
+
+
+OUR GST RETURN PACKAGES 
+
+
+Monthly Package
+
+Nil Return from Rs. 199/- per month
+Upto 10 Transaction Rs. 499/- per month
+Upto 50 Transaction Rs. 999/- per month
+Upto 100 Transaction Rs. 1499/- per month
+
+Quarterly Package
+
+Nil Return from Rs. 399/- per quarter
+Upto 10 Transaction Rs. 999/- per quarter
+Upto 50 Transaction Rs. 1999/- per quarter
+Upto 100 Transaction Rs. 2999/- per quarter
+
+Yearly Package
+
+Nil Return from Rs. 1199/- per year
+Upto 10 Transaction Rs. 2999/- per year
+Upto 50 Transaction Rs. 5999/- per year
+Upto 100 Transaction Rs. 8999/- per year?
                                     </p>
                                     <a href="#" class="btn btn-learn-more">
                                     LEARN MORE <i class="ion-ios-arrow-right"></i>
@@ -205,11 +250,30 @@
                         </div>
                         <div class="col-md-6">
                             <div class="four-features four-features-right-top">
-                                <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
+                                <img src="assets/images/compli.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>LIFE IN ADVENTURE</h3>
+                                    <h3>COMPLINCES</h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                   We offer following Annual compliance for Private limited company:
+
+
+
+Filing of Annual MCA return
+Filing of Annual Income tax return
+
+
+Other Compliance
+
+?
+
+Secretarial services including Board of meetings, Annual general meeting, Directors report and Annual report
+Maintain accounts and preparation of financial statements.
+Filing of income tax return
+GST regulations
+TDS regulations
+State shops and establishment Act
+Labor and Employment Act
+Any other applicable law
                                     </p>
                                     <a href="#" class="btn btn-learn-more">
                                     LEARN MORE <i class="ion-ios-arrow-right"></i>
@@ -241,7 +305,7 @@
                             <div class="row">
                                 <div class="col-md-9 col-md-offset-1">
                                     <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna.
+                                    USV & ASSOCIATES is a firm where you will find online COMPANY services and professional services under one roof. USV & ASSOCIATES process your legal work online, Clients of USV & ASSOCIATES need not to visit office to get work done instead their work is done online on just a click.
                                     </p>
                                 </div>
                             </div>
@@ -268,13 +332,13 @@
                             <div class="footer-list">
                                 <ul class="list-unstyled">
                                     <li class="list-table">
-                                        <i class="ion-ios-home"></i><p>Untitled Inc 1234 Somewhere Road Suite #2894 Nashville, TN 00000-0000</p>
+                                        <i class="ion-ios-home"></i><p>N-54 2nd FLOOR LAXMI NAGAR,DELHI-110092</p>
                                     </li>
                                     <li class="list-table">
-                                        <i class="ion-android-call"></i><p>(+440) 103-5554</p>
+                                        <i class="ion-android-call"></i><p>(+91) 991166-9435</p>
                                     </li>
                                     <li class="list-table">
-                                        <i class="ion-email"></i><p>information@mail.com</p>
+                                        <i class="ion-email"></i><p>ssvatas@gmail.com</p>
                                     </li>
                                 </ul>
                                 <div class="list-solid-state">
@@ -303,7 +367,7 @@
                 <div class="footer-bottom">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>&copy; TECHNEXT 2016. ALL RIGHTS RESERVED BY <a href="http://www.themewagon.com" target="_blank">THEMEWAGON</a></p>
+                            <p>&copy; USV & ASSOCIATES 2018. ALL RIGHTS RESERVED BY <a href="http://www.themewagon.com" target="_blank">THEMEWAGON</a></p>
                         </div>
                     </div>
                 </div>
