FIX: Style, Enable title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Solid State</title>
+        <title>USV & ASSOCIATES </title>
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
@@ -19,10 +19,10 @@
     <!-- end of preloader -->
 
     <div class="body-content" style="display:none;">
-        <div class="USV & ASSOCIATES">
+        <div class="navbar-ss">
              <!-- Header -->
             <header id="header" class="alt">
-                <!-- <h1><a href="index.html" class="a-transparent">USV& ASSOCIATES</a></h1> -->
+                <h1><a href="index.html" class="site-title">USV & ASSOCIATES</a></h1>
                 <nav>
                     <a href="#menu" class="a-menu">Menu <i class="ion-android-menu"></i> </a>
                 </nav>
@@ -325,7 +325,7 @@ Any other applicable law
                                 <div class="form-group">
                                     <textarea class="form-control form-footer" rows="5" placeholder="Message"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-solid-state">Send Message</button>
+                                <button type="submit" class="btn btn-ss">Send Message</button>
                             </form>
                         </div>
                         <div class="col-md-6">
@@ -341,7 +341,7 @@ Any other applicable law
                                         <i class="ion-email"></i><p>ssvatas@gmail.com</p>
                                     </li>
                                 </ul>
-                                <div class="list-solid-state">
+                                <div class="list-ss">
                                     <ul class="list-inline">
                                         <li>
                                             <a href="#"><i class="ion-social-facebook icon-facebook"></i></a>
