--- a/elements.html
+++ b/elements.html
@@ -666,7 +666,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="footer-bottom">
 							<div class="row">
 								<div class="col-md-12">
-									<p>&copy; TECHNEXT 2016. ALL RIGHTS RESERVED BY <a href="http://www.themewagon.com" target="_blank">THEMEWAGON</a></p>
+									<p>&copy; USV & ASSOCIATES 2018. Site Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
 								</div>
 							</div>
 						</div>
