--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-md-12"> 
                         <p>Company Regestration @6999 No Hiddend Cost
-Gst Regestration @599 No Hiddend Charges <a href="http://www.themewagon.com">THEMEWAGON</a></p>
+Gst Regestration @599 No Hiddend Charges</p>
                     </div>
                 </div>
 
@@ -367,7 +367,7 @@ Any other applicable law
                 <div class="footer-bottom">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>&copy; USV & ASSOCIATES 2018. ALL RIGHTS RESERVED BY <a href="http://www.themewagon.com" target="_blank">THEMEWAGON</a></p>
+                            <p>&copy; USV & ASSOCIATES 2018. Site Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
                         </div>
                     </div>
                 </div>
