--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122699710-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-122699710-2');
+        </script>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,9 +33,9 @@
              <!-- Header -->
             <header id="header" class="alt">
                 <h1><a href="index.html" class="site-title">USV & ASSOCIATES</a></h1>
-                <nav>
+                <!-- <nav>
                     <a href="#menu" class="a-menu">Menu <i class="ion-android-menu"></i> </a>
-                </nav>
+                </nav> -->
             </header>
 
             <!-- Menu -->
