ADD: Pricing data

--- a/elements.html
+++ b/elements.html
@@ -676,7 +676,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="footer-bottom">
 							<div class="row">
 								<div class="col-md-12">
-									<p>&copy; USV & ASSOCIATES 2018. Site Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
+									<p>&copy; USV & ASSOCIATES 2018. Site Hosted and Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
 								</div>
 							</div>
 						</div>
