--- a/index.html
+++ b/index.html
@@ -185,10 +185,19 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 </div>
                                 <div class="features-content">
                                     <h3>COMPANY REGESTRATION</h3>
-                                    <p>
-                                   Want to setup a business at affordable price , we will incorporate your Business. Clear your all registration doubts with our professionals.
-                                    </p>
-                                    <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                    <ul>
+                                        <li>
+                                            Limited Liability Partnership from <b>₹ 3,499/-</b>
+                                        </li>
+                                        <li>
+                                            Private Limited Company from <b>₹ 6,999/-</b>
+                                        </li>
+                                        <li>
+                                            Public Limited Company From <b>₹ 22500/-</b>
+                                        </li>
+                                    </ul>
+
+                                    <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -197,10 +206,15 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 <img src="assets/images/gst.png" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
                                     <h3>GST REGESTRATION </h3>
-                                    <p>
-                                    We can help you get GST registration for your business within 48 hours. Our services are best in class and is at a reasonable cost (INR 499/- per registration for individual and INR 999/- per registration for company
-                                    </p>
-                                    <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                    <ul>
+                                        <li>
+                                            For Individual <b>₹ 499/-</b>
+                                        </li>
+                                        <li>
+                                            For Company <b>₹ 999/-</b>
+                                        </li>
+                                    </ul>
+                                    <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -377,7 +391,7 @@ Any other applicable law
                 <div class="footer-bottom">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>&copy; USV & ASSOCIATES 2018. Site Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
+                            <p>&copy; USV & ASSOCIATES 2018. Site Hosted and Managed By <a href="https://easylauncher.net/" target="_blank">Easy Launcher</a></p>
                         </div>
                     </div>
                 </div>
