--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
         <link href="assets/css/main.css" rel="stylesheet">
-
     </head>
 <body>
     <!-- preloader -->
@@ -403,6 +402,15 @@ Any other applicable law
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
 
+    <!--Start of freshchat Chat Script-->
+    <script src="https://wchat.freshchat.com/js/widget.js"></script>
+    <script>
+      window.fcWidget.init({
+        token: "899ea801-cb5a-491b-b66f-476baf7a4b35",
+        host: "https://wchat.freshchat.com"
+      });
+    </script>
+    <!--End of freshchat Chat Script-->
 
 </body>
   
