CHANGE: rewrite content and plan

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="navbar-ss">
              <!-- Header -->
             <header id="header" class="alt">
-                <h1><a href="index.html" class="site-title">USV & ASSOCIATES</a></h1>
+                <h1><a href="/" class="site-title">USV & ASSOCIATES</a></h1>
                 <!-- <nav>
                     <a href="#menu" class="a-menu">Menu <i class="ion-android-menu"></i> </a>
                 </nav> -->
@@ -42,7 +42,7 @@
                 <div class="inner">
                     <h2>Menu</h2>
                     <ul class="links">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="elements.html">Elements</a></li>
                         <!-- <li><a href="#">Log In</a></li>
                         <li><a href="#">Sign Up</a></li> -->
@@ -70,7 +70,7 @@ Gst Regestration @599 No Hiddend Charges</p>
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="#" class="btn btn-banner">DEFAULT</a>
+                        <a href="#" class="btn btn-banner">CALL 9911669435</a>
                     </div>
                 </div>
             </div>
@@ -220,50 +220,65 @@ Business is the game of challenges where are only two stages profit & loss. The 
                     </div>
                     <div class="row">
                         <div class="col-md-6">
+
+
+                                    
+
                             <div class="four-features four-features-left-top">
                             <img src="assets/images/gstr.jpg"  alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
                                     <h3>GST RETURNS</h3>
                                     <p>
-                                    All registered businesses have to file monthly, quarterly and/or annual GST Returns based on the type of business.
+
+                                    <div class="table-responsive table-design">
+                                        <table class="table table-hover">
+                                            
+                                                <thead>
+                                                    <tr>
+                                                        <th>Transactions</th>
+                                                        <th>1 Month</th>
+                                                        <th>3 Months</th>
+                                                        <th>12 Months</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>Nil</td>
+                                                        <td>199</td>
+                                                        <td>399</td>
+                                                        <td>1199</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>10 Transactions</td>
+                                                        <td>499</td>
+                                                        <td>999</td>
+                                                        <td>2999</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>50 Transactions</td>
+                                                        <td>999</td>
+                                                        <td>1999</td>
+                                                        <td>5999</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>100 Transactions</td>
+                                                        <td>1499</td>
+                                                        <td>2999</td>
+                                                        <td>8999</td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
+                                                        <td>100+ Transactions</td>
+                                                        <td></td>
+                                                        <td>Contact Us</td>
+                                                        <td></td>
+                                                    </tr>
+                                                </tfoot>
+                                        </table>
+                                    </div>
 
 
-
-GSTR 3B is required to be filed monthly for all registered non composition business.
-
-GSTR 1 is required to be filed monthly if turnover exceeds Rs. 1.5 crore, upto 1.5 crore this can be filed quarterly.
-
-
-
-Composition holders need to file quarterly returns.
-
-
-
-
-
-OUR GST RETURN PACKAGES 
-
-
-Monthly Package
-
-Nil Return from Rs. 199/- per month
-Upto 10 Transaction Rs. 499/- per month
-Upto 50 Transaction Rs. 999/- per month
-Upto 100 Transaction Rs. 1499/- per month
-
-Quarterly Package
-
-Nil Return from Rs. 399/- per quarter
-Upto 10 Transaction Rs. 999/- per quarter
-Upto 50 Transaction Rs. 1999/- per quarter
-Upto 100 Transaction Rs. 2999/- per quarter
-
-Yearly Package
-
-Nil Return from Rs. 1199/- per year
-Upto 10 Transaction Rs. 2999/- per year
-Upto 50 Transaction Rs. 5999/- per year
-Upto 100 Transaction Rs. 8999/- per year?
                                     </p>
                                     <a href="#" class="btn btn-learn-more">
                                     LEARN MORE <i class="ion-ios-arrow-right"></i>
@@ -277,26 +292,15 @@ Upto 100 Transaction Rs. 8999/- per year?
                                 <div class="features-content">
                                     <h3>COMPLINCES</h3>
                                     <p>
-                                   We offer following Annual compliance for Private limited company:
-
-
-
-Filing of Annual MCA return
-Filing of Annual Income tax return
-
-
-Other Compliance
-
-?
-
-Secretarial services including Board of meetings, Annual general meeting, Directors report and Annual report
-Maintain accounts and preparation of financial statements.
-Filing of income tax return
-GST regulations
-TDS regulations
-State shops and establishment Act
-Labor and Employment Act
-Any other applicable law
+                                        <ul>
+                                            <li>Annual compliance for Private limited company</li>
+                                            <li>Filing of Annual MCA return</li>
+                                            <li>Filing of Annual Income tax return Other Compliance</li>
+                                            <li>Secretarial services including Board of meetings, Annual general meeting, Directors report and Annual report</li>
+                                            <li>Maintain accounts and preparation of financial statements</li>
+                                            <li>Filing of Income tax return GST regulations TDS regulations</li>
+                                            <li>State shops and establishment Act Labor and Employment Act Any other applicable law</li>
+                                        </ul>
                                     </p>
                                     <a href="#" class="btn btn-learn-more">
                                     LEARN MORE <i class="ion-ios-arrow-right"></i>
